# BrowseHive

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .todos.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY_WINDOWS.md  QUICK_START_SERVICE.md  README.md  agent_team_architecture.html  agent_team_dashboard.html  ai_router.py  anthropic_client.py  architecture.html  bash.exe.stackdump  config_loader.py  deepseek_client.py  doubao_client.py  fetch_deepwiki_index.py  i18n.py  install_service.ps1  mcp_config.json  model_config.example.json  multi-project.code-workspace  ouyi_api.py  package-lock.json  package.json  pyproject.toml  quick_start.py  requirements-kb.txt  requirements.txt  run_agent.py  settings.json  setup_team.py  skills-lock.json  store.py  volcengine_client.py
.claude/: CLAUDE.md  cost-aware-mcp-router.yaml  cost-aware-router.yaml  models.yaml  skill-router-learning.json  skill-router-momentum.json  skill-router-registry.json  skills-index.json
.codegraph/: daemon.pid
.engine/: metrics.json
.memory/: MEMORY.md  codegraph_summary.md  feedback_agent-team-code-review-2025-05-27.md  project_agent-team-2025-05-27.md  project_agent-team-complete-2025-05-27.md  project_ai_chat_mcp_simplified_2025-05-26.md  project_browsehive_simplified_2025-05-27.md  project_browser_harness_setup_2025-05-26.md  project_meta_mcp_dynamic_proxy_2026-05-26.md  ref_browsehive_mcp_workflow.md
AI-Chat MCP Workflow/: README.md
AI知识库/: .backup_state.json  CHANGELOG.md  README.md  bash.exe.stackdump  config.json  kb-manager.py  kb_backup.py  kb_sync.py
MCP/: .mcp.json  (+7 more)
(+732 files in other folders)
